<resources>
    <string name="admod_banner_id">@string/lib_crs_admob_banner_id</string>
    <string name="admod_native_id">@string/lib_crs_admob_native_id</string>
    <string name="admod_full_id">@string/lib_crs_admob_full_id</string>

    <string name="app_name">Video Editor</string>
    <string name="cutter">Cutter</string>
    <string name="studio">Studio</string>
    <string name="add_music">Add Music</string>
    <string name="merger">Merger</string>
    <string name="speed">Speed</string>
    <string name="more_app">More App</string>
    <string name="no_video">Don\'t have any video!</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_file_can_not_empty">File name can not empty!</string>
    <string name="name_file_can_not_contain_character">Please don\'t input special character!</string>
    <string name="progress_dialog_saving">Saving...</string>
    <string name="create_file">Create file:</string>
    <string name="select_file">Select videos</string>
    <string name="search">Search</string>
    <string name="please_choose_file">Please choose files you want to merger!</string>
    <string name="you_need_to_have">You need to have more than 2 video to merger!</string>
    <string name="sort">Sort</string>
    <string name="file">File name exist, please try again!</string>
    <string name="support_mp4">Only support mp4 format</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="name_file_exist">File name is exist!</string>
    <string name="delete_this_record">Are you sure want to delete this file?</string>
    <string name="checked_all">Check all</string>
    <string name="delete_videos">Delete videos</string>
    <string name="delete_file">Delete</string>
    <string name="detail">Detail</string>
    <string name="rename">Rename</string>
    <string name="open_file_with">Open file with</string>
    <string name="title_audio">Title</string>
    <string name="music">Select audio</string>
    <string name="time_fail">Time audio cannot be less than one second!</string>
    <string name="choose_other_file">Please choose other file!</string>
    <string name="not_support_this_file">Not support this file!</string>
    <string name="share_file">Share audio to..</string>
    <string name="path">Path</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="date_time">Date added</string>
    <string name="fail_rename">Rename failed!</string>
    <string name="no_audio">Your device don\'t have any audio!</string>
    <string name="you_not_add_music">You have not selected any file audio!</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="loading">Loading...</string>
    <string name="replay">Replay</string>
    <string name="prepare">Preparing...</string>
    <string name="action_sort_order">Sort order</string>
    <string name="sort_order_a_z">Title A-Z</string>
    <string name="sort_order_z_a">Title Z-A</string>
    <string name="sort_date_added">Date: Ascending</string>
    <string name="sort_date_added_descending">Date: Descending</string>
    <string name="none">None</string>
    <string name="can_not_create_file">Can not create video!</string>

</resources>
