<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/music">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMusicList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/lnView"
        android:layout_below="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/lnView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_no_audio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/no_audio"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/lnView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lnView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/view">

        <TextView
            android:id="@+id/tv_name_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/none"
            android:textColor="#fff"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name_song"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_song">

            <com.bs.videoeditor.view.RangeSeekBar
                android:id="@+id/rangeSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/view_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintBottom_toTopOf="@+id/tv_add_music"
                app:layout_constraintTop_toBottomOf="@+id/rangeSeekbar">

                <ImageView
                    android:id="@+id/iv_play"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_play_arrow_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_previous"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_skip_previous_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_play"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_next"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_skip_next_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_play"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/tv_add_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:gravity="center"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingTop="@dimen/_12sdp"
                android:text="@string/add_music"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"></android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>